# Advanced_RAG_Deployment

./: .gitignore
AdvRag/: pyproject.toml  requirements.txt  test_pipeline.py
AdvRag/src/: config.py  main.py
AdvRag/src/api/: app.py
AdvRag/src/core/: llm.py
AdvRag/src/data_pipeline/: loader.py  transformation.py
AdvRag/src/storage/: __init__.py  sql_store.py  vector_store.py
AdvRag/src/utils/: helpers.py  retrieval_logging.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ChatPanel.jsx  Message.jsx  Sidebar.jsx
